adds styling to tabbed home page

--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -6,11 +6,11 @@
 @import 'partials/activeStreamsCard';
 @import 'partials/terminal';
 @import 'partials/indexviews';
+@import 'partials/header';
 html {
   box-sizing: border-box;
   font-size: 16px;
 }
-
 
 body {
   margin: 0;
