--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -216,10 +216,19 @@ body, html {
   font-family: Arial;
 }
 
+.index-view {
+  background-color: #777;
+  width: 100vw;
+}
+
+.streams {
+  width: 100vw;
+}
+
 /* Style tab links */
 .tablink {
   background-color: #555;
-  color: white;
+  color: #cecece;
   float: left;
   border: none;
   outline: none;
@@ -227,6 +236,10 @@ body, html {
   padding: 14px 16px;
   font-size: 18px;
   width: 33.33%;
+}
+
+.tablink:focus {
+  background-color: #777;
 }
 
 .tablink:hover {
@@ -239,6 +252,32 @@ body, html {
   display: none;
   padding: 100px 20px;
   height: 100%;
+}
+
+.header {
+  height: 75px;
+  background-color: #794545;
+}
+.header .headerLogo {
+  height: 50px;
+  margin: 1em;
+}
+.header .headerbtn {
+  background-color: #bbbbbb;
+  color: #4d4d4d;
+  float: right;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 8px 10px;
+  font-size: 12px;
+  margin: 15px;
+  margin-top: 20px;
+  width: 10em;
+  border-radius: 4px;
+}
+.header .headerbtn:hover {
+  background-color: #777;
 }
 
 html {
