--- a/client/src/styles/scss/partials/_indexviews.scss
+++ b/client/src/styles/scss/partials/_indexviews.scss
@@ -7,10 +7,19 @@ body, html {
     font-family: Arial;
 }
 
+.index-view {
+    background-color: #777;
+    width: 100vw;
+}
+
+.streams {
+    width: 100vw;
+}
+
 /* Style tab links */
 .tablink {
     background-color: #555;
-    color: white;
+    color: rgb(206, 206, 206);
     float: left;
     border: none;
     outline: none;
@@ -18,6 +27,10 @@ body, html {
     padding: 14px 16px;
     font-size: 18px;
     width: 33.33%;
+}
+
+.tablink:focus {
+    background-color: #777;
 }
 
 .tablink:hover {
