--- a/client/src/styles/scss/partials/_activeStreamsCard.scss
+++ b/client/src/styles/scss/partials/_activeStreamsCard.scss
@@ -7,13 +7,15 @@
 
   .activeStreamCard {
 
-    border: 2px solid black;
-    background-color: salmon;
+    border: 3px solid #555;
+    background-color: rgb(202, 202, 202);
+    border-radius: 5px;
     width: 25vw;
     height:25vw;
     margin:3em;
+    padding:1.5em;
     &:hover {
-      opacity: 0.5;
+      opacity: 0.8;
     }
 
     .banner {
@@ -26,10 +28,12 @@
         h1 {
           font-size: 2.2em;
           margin: 0;
+          color: #444444;
         }
         h2 {
           font-size: 1.5em;
           margin: 0;
+          color: #444444;
         }
       }
       img {
