--- a/client/src/styles/scss/partials/_scheduledStreamCard.scss
+++ b/client/src/styles/scss/partials/_scheduledStreamCard.scss
@@ -1,10 +1,12 @@
 main {
 
   .currentStream {
-    border: 2px solid black;
-    background-color: aquamarine;
+    border: 3px solid #555;
+    background-color: rgb(202, 202, 202);
+    border-radius: 5px;
     width:75%;
     margin: 2em 4em;
+    padding: 1em;
     .currentStreamBanner {
       display:flex;
       justify-content: space-between;
@@ -12,19 +14,23 @@ main {
       h3 {
         font-size: 2em;
         margin-left:1em;
+        color: #444444;
       }
       h4 {
         font-size: 1.5em;
+        color: #444444;
       }
       h5 {
         font-size: 1.2em;
         margin-right: 10em;
+        color: #444444;
       }
 
     }
     p {
       font-size: 1em;
       margin:2em;
+      margin-bottom: 1em;
     }
   }
 }
