fix term styles and config server and electron for axios

--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -33,6 +33,7 @@ code {
 .App {
   flex-direction: column;
   min-height: 100vh;
+  max-height: 100vh;
   min-width: 100vw;
   overflow: hidden;
   // background-color: black;
