fix term styles and config server and electron for axios

--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -158,24 +158,23 @@ main .currentStream {
         font-size: 1.2em; }
 
 .Terminal-display {
-  position: relative; }
+  position: relative;
+  overflow: scroll; }
   .Terminal-display .wrapper {
+    position: absolute;
+    bottom: 0;
     display: flex;
     flex-wrap: nowrap; }
-    .Terminal-display .wrapper .terminal-main div.terminal.xterm {
-      position: absolute;
-      bottom: 0;
-      overflow: scroll; }
-      .Terminal-display .wrapper .terminal-main div.terminal.xterm div.xterm-screen {
-        display: flex;
-        min-width: 50vw;
-        min-height: 48vh; }
-      .Terminal-display .wrapper .terminal-main div.terminal.xterm canvas[class^="xterm-"] {
-        display: flex;
-        min-width: 50vw !important;
-        min-height: 48vh; }
-      .Terminal-display .wrapper .terminal-main div.terminal.xterm canvas.xterm-text-layer, .Terminal-display .wrapper .terminal-main div.terminal.xterm canvas.xterm-cursor-layer {
-        padding: 0.5rem 3rem 1rem 2rem; }
+    .Terminal-display .wrapper .terminal-main div.xterm-screen {
+      display: flex;
+      min-width: 50vw;
+      min-height: 48vh; }
+    .Terminal-display .wrapper .terminal-main canvas[class^="xterm-"] {
+      display: flex;
+      min-width: 50vw !important;
+      min-height: 48vh; }
+    .Terminal-display .wrapper .terminal-main canvas.xterm-text-layer, .Terminal-display .wrapper .terminal-main canvas.xterm-cursor-layer {
+      padding: 0.5rem 3rem 1rem 2rem; }
 
 .Filetree-display {
   background-color: #282a36 !important; }
