updates Index Views styling and Icons

--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -4,6 +4,7 @@
 @import 'partials/video';
 @import 'partials/scheduledStreamCard';
 @import 'partials/activeStreamsCard';
+@import 'partials/archivedStreamsCards';
 @import 'partials/terminal';
 @import 'partials/fileDirectory';
 @import 'partials/indexviews';
