--- a/client/src/styles/scss/partials/_archivedStreamsCards.scss
+++ b/client/src/styles/scss/partials/_archivedStreamsCards.scss
@@ -8,13 +8,15 @@
 
   .archievedStreamCard {
 
-    border: 2px solid black;
-    background-color: khaki;
+    border: 3px solid #555;
+    background-color: rgb(202, 202, 202);
+    border-radius: 5px;
     width: 25vw;
     height:25vw;
     margin:3em;
+    padding:1.5em;
     &:hover {
-      opacity: 0.5;
+      opacity: 0.8;
     }
 
     .banner {
@@ -27,14 +29,17 @@
         h1 {
           font-size: 2.2em;
           margin: 0;
+          color: #444444;
         }
         h2 {
           font-size: 1.5em;
           margin: 0;
+          color: #444444;
         }
         h3 {
-          font-size: 1.2em;
+          font-size: 1em;
           margin: 0;
+          color: #444444;
         }
       }
       img {
@@ -45,7 +50,7 @@
         width: 4em;
         height: 4em;
         margin: 1em; 
-        background-color:black;
+
       }
     }
     .description-container {
