--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -143,7 +143,9 @@ main .currentStream {
     margin: 3em;
     padding: 1.5em; }
     .streams .activeStreamCard:hover {
-      opacity: 0.8; }
+      opacity: 0.8;
+      transform: scale(1.05);
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
     .streams .activeStreamCard .banner {
       display: flex;
       justify-content: space-between; }
