fixed electron css import

--- a/electronapp/src/styles/css/index.css
+++ b/electronapp/src/styles/css/index.css
@@ -51,6 +51,7 @@
 }
 .dashboard .streams .scheduledStreamCard p {
   font-size: 1.5em;
+  color: blue;
   height: 20%;
 }
 .dashboard .streams .scheduledStreamCard div {
