--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -1,4 +1,5 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,800");
 .chat-main {
   position: relative;
   height: 100%;
@@ -103,114 +104,71 @@
   width: 100%;
   height: 52vh; }
 
-main .currentStream {
-  border: 3px solid #555;
-  background-color: #cacaca;
-  border-radius: 5px;
-  width: 75%;
-  margin: 2em 4em;
-  padding: 1em; }
-  main .currentStream .currentStreamBanner {
+.streams {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+  .streams .stream-card {
     display: flex;
-    justify-content: space-between; }
-    main .currentStream .currentStreamBanner h3 {
-      font-size: 2em;
-      margin-left: 1em;
+    border: 3px solid #555;
+    background-color: #cacaca;
+    border-radius: 5px; }
+    .streams .stream-card:hover {
+      opacity: 0.8; }
+    .streams .stream-card .stream-banner {
+      display: flex;
+      justify-content: space-between; }
+    .streams .stream-card .scheduled {
+      display: flex;
+      flex-direction: row;
+      width: 75%;
+      margin: 2em 4em;
+      padding: 1em; }
+    .streams .stream-card .active-archived {
+      width: 25vw;
+      height: 25vw;
+      margin: 3em;
+      padding: 1.5em; }
+    .streams .stream-card .card-img {
+      width: 4em;
+      height: 4em;
+      margin: 1em; }
+    .streams .stream-card .card-content {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap; }
+      .streams .stream-card .card-content .description {
+        display: flex;
+        margin: 1em; }
+        .streams .stream-card .card-content .description p {
+          font-size: 1.2em; }
+  .streams div {
+    margin: 1em; }
+    .streams div h1 {
+      font-size: 2.2em;
+      margin: 0;
       color: #444444; }
-    main .currentStream .currentStreamBanner h4 {
+    .streams div h2 {
+      font-size: 1.8em;
+      margin: 0;
+      color: #444444; }
+    .streams div h3 {
       font-size: 1.5em;
+      margin: 0em;
+      color: #444444; }
+    .streams div h4 {
+      font-size: 1.3em;
       color: #444444;
       margin-top: 1.5em; }
-    main .currentStream .currentStreamBanner h5 {
+    .streams div h5 {
       font-size: 1em;
       margin-right: 15em;
       color: #444444; }
-  main .currentStream p {
-    font-size: 1em;
-    margin: 1em;
-    margin-bottom: 2em; }
-  main .currentStream .imagePlaceholder {
-    width: 4em;
-    height: 4em;
-    margin: 1em; }
-
-.streams {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around; }
-  .streams .activeStreamCard {
-    border: 3px solid #555;
-    background-color: #cacaca;
-    border-radius: 5px;
-    width: 25vw;
-    height: 25vw;
-    margin: 3em;
-    padding: 1.5em; }
-    .streams .activeStreamCard:hover {
-      opacity: 0.8; }
-    .streams .activeStreamCard .banner {
-      display: flex;
-      justify-content: space-between; }
-      .streams .activeStreamCard .banner div {
-        margin: 1em; }
-        .streams .activeStreamCard .banner div h1 {
-          font-size: 2.2em;
-          margin: 0;
-          color: #444444; }
-        .streams .activeStreamCard .banner div h2 {
-          font-size: 1.5em;
-          margin: 0;
-          color: #444444; }
-      .streams .activeStreamCard .banner .imagePlaceholder {
-        width: 4em;
-        height: 4em;
-        margin: 1em; }
-    .streams .activeStreamCard .description-container {
-      margin: 1em; }
-      .streams .activeStreamCard .description-container p {
-        font-size: 1.2em; }
-
-.streams {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around; }
-  .streams .archievedStreamCard {
-    border: 3px solid #555;
-    background-color: #cacaca;
-    border-radius: 5px;
-    width: 25vw;
-    height: 25vw;
-    margin: 3em;
-    padding: 1.5em; }
-    .streams .archievedStreamCard:hover {
-      opacity: 0.8; }
-    .streams .archievedStreamCard .banner {
-      display: flex;
-      justify-content: space-between; }
-      .streams .archievedStreamCard .banner div {
-        margin: 1em; }
-        .streams .archievedStreamCard .banner div h1 {
-          font-size: 2.2em;
-          margin: 0;
-          color: #444444; }
-        .streams .archievedStreamCard .banner div h2 {
-          font-size: 1.5em;
-          margin: 0;
-          color: #444444; }
-        .streams .archievedStreamCard .banner div h3 {
-          font-size: 1em;
-          margin: 0;
-          color: #444444; }
-      .streams .archievedStreamCard .banner .imagePlaceholder {
-        width: 4em;
-        height: 4em;
-        margin: 1em; }
-    .streams .archievedStreamCard .description-container {
-      margin: 1em; }
-      .streams .archievedStreamCard .description-container p {
-        font-size: 1.2em; }
+    .streams div p {
+      font-size: 1em;
+      margin: 1em;
+      margin-bottom: 2em; }
 
 .Terminal-display {
   position: relative;
@@ -240,68 +198,111 @@ main .currentStream {
   .Filetree-display .ant-tree-title {
     color: #fff; }
 
-* {
-  box-sizing: border-box; }
-
-/* Set height of body and the document to 100% */
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Arial; }
-
-.index-view {
+.pageGrid .index-view {
   background-color: #777;
   width: 100vw; }
-
-.streams {
+.pageGrid .streams {
   width: 100vw; }
 
-/* Style tab links */
-.tablink {
-  background-color: #555;
-  color: #cecece;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  font-size: 18px;
-  width: 33.33%; }
-
-.tablink:focus {
-  background-color: #777; }
-
-.tablink:hover {
-  background-color: #777; }
-
-/* Style the tab content (and add height:100% for full page content) */
-.tabcontent {
-  color: white;
-  display: none;
-  padding: 100px 20px;
-  height: 100%; }
-
-header {
-  height: 75px;
-  background-color: #794545; }
-  header .headerLogo {
-    height: 50px;
-    margin: 1em; }
-  header .headerbtn {
-    background-color: #bbbbbb;
-    color: #4d4d4d;
-    float: right;
-    border: none;
+.index-tabs {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center; }
+  .index-tabs .tablink {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
+    background-color: #555;
+    color: #cecece;
+    border-right: 1px solid rgba(0, 0, 0, 0.6);
+    border-left: 1px solid rgba(0, 0, 0, 0.6);
+    border-radius: 0px 0px 5px 5px;
     outline: none;
     cursor: pointer;
-    padding: 8px 10px;
-    font-size: 12px;
-    margin: 15px;
-    margin-top: 20px;
-    width: 10em;
-    border-radius: 4px; }
-  header .headerbtn:hover {
-    background-color: #777; }
+    padding: 0.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-shadow: -1px 1px 1px black;
+    width: 33.33%; }
+    .index-tabs .tablink:focus {
+      background-color: #777; }
+    .index-tabs .tablink:hover {
+      background-color: #666; }
+
+.stream-parent {
+  overflow: hidden;
+  background-color: #000; }
+  .stream-parent .component-container1 {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-areas: "Filetree Video Chat"; }
+    .stream-parent .component-container1 .Filetree-display {
+      position: relative;
+      max-height: 52vh;
+      overflow-y: auto;
+      height: 100%;
+      width: 100%;
+      grid-area: Filetree; }
+    .stream-parent .component-container1 .Video-display {
+      position: relative;
+      height: 100%;
+      width: 100%;
+      grid-area: Video; }
+    .stream-parent .component-container1 .Chat-display {
+      position: relative;
+      height: 100%;
+      width: 100%;
+      grid-area: Chat; }
+  .stream-parent .component-container2 {
+    display: grid;
+    position: relative;
+    height: 47vh;
+    grid-template-columns: 50% 50%;
+    grid-template-areas: "Code Terminal"; }
+    .stream-parent .component-container2 .Code-display {
+      grid-column: span 6;
+      position: relative;
+      height: 100%;
+      grid-area: Code; }
+    .stream-parent .component-container2 .Terminal-display {
+      grid-column: span 6;
+      position: relative;
+      display: flex;
+      min-width: 100vw;
+      grid-area: Terminal; }
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  height: 4rem;
+  background-color: #000000; }
+  .nav .navLogo {
+    height: 70%;
+    margin: 0.5em 1rem; }
+  .nav .login-register {
+    display: flex;
+    flex-direction: row; }
+    .nav .login-register .navBtn {
+      background-color: #bbbbbb;
+      color: #4d4d4d;
+      text-decoration: none;
+      display: flex;
+      justify-content: center;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 0.5rem;
+      font-size: 0.75rem;
+      margin: 1rem 2rem 1rem 0rem;
+      width: 6rem;
+      border-radius: 4px; }
+      .nav .login-register .navBtn:hover {
+        background-color: #777; }
 
 html {
   box-sizing: border-box;
@@ -310,7 +311,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
@@ -323,47 +324,6 @@ code {
   max-height: 100vh;
   min-width: 100vw;
   overflow-y: auto; }
-  .App .stream-parent {
-    overflow: hidden; }
-    .App .stream-parent .component-container1 {
-      display: grid;
-      grid-template-columns: 1fr 2fr 1fr;
-      grid-template-areas: "Filetree Video Chat"; }
-      .App .stream-parent .component-container1 .Filetree-display {
-        position: relative;
-        max-height: 52vh;
-        overflow-y: auto;
-        height: 100%;
-        width: 100%;
-        grid-area: Filetree;
-        background-color: white; }
-      .App .stream-parent .component-container1 .Video-display {
-        position: relative;
-        height: 100%;
-        width: 100%;
-        grid-area: Video; }
-      .App .stream-parent .component-container1 .Chat-display {
-        position: relative;
-        height: 100%;
-        width: 100%;
-        grid-area: Chat; }
-    .App .stream-parent .component-container2 {
-      display: grid;
-      position: relative;
-      height: 47vh;
-      grid-template-columns: 50% 50%;
-      grid-template-areas: "Code Terminal"; }
-      .App .stream-parent .component-container2 .Code-display {
-        grid-column: span 6;
-        position: relative;
-        height: 100%;
-        grid-area: Code; }
-      .App .stream-parent .component-container2 .Terminal-display {
-        grid-column: span 6;
-        position: relative;
-        display: flex;
-        min-width: 100vw;
-        grid-area: Terminal; }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -387,129 +347,5 @@ code {
     transform: rotate(0deg); }
   to {
     transform: rotate(360deg); } }
-.electron {
-  width: 800px;
-  height: 600px;
-  background-color: lightgrey; }
-  .electron .dashboard {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    width: 100%; }
-    .electron .dashboard .header {
-      height: 35%;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center; }
-      .electron .dashboard .header .image-placeholder {
-        width: 50px;
-        height: 50px;
-        margin: .5em;
-        background-color: black; }
-      .electron .dashboard .header .stream-controls {
-        display: flex;
-        justify-content: center;
-        border: 2px solid black;
-        padding: 1em 2em;
-        width: 60%; }
-        .electron .dashboard .header .stream-controls #instant {
-          margin: .5em; }
-        .electron .dashboard .header .stream-controls #scheduleNew {
-          margin: .5em; }
-    .electron .dashboard .streams {
-      height: 65%; }
-      .electron .dashboard .streams .scheduledStreamCard {
-        width: 90%;
-        height: 15%;
-        display: flex;
-        justify-content: space-between;
-        border: 2px solid black;
-        margin: 1em 0;
-        align-items: center; }
-        .electron .dashboard .streams .scheduledStreamCard .startPlaceholder {
-          width: 50px;
-          height: 50px;
-          background-color: aquamarine; }
-        .electron .dashboard .streams .scheduledStreamCard p {
-          font-size: 1.5em;
-          height: 20%; }
-        .electron .dashboard .streams .scheduledStreamCard div {
-          display: inline-flex; }
-          .electron .dashboard .streams .scheduledStreamCard div .date-time {
-            display: flex;
-            flex-direction: column; }
-            .electron .dashboard .streams .scheduledStreamCard div .date-time #date {
-              font-size: 1em;
-              display: block;
-              margin: 0; }
-            .electron .dashboard .streams .scheduledStreamCard div .date-time #time {
-              font-size: 1em;
-              display: block;
-              margin: 0; }
-        .electron .dashboard .streams .scheduledStreamCard .controls {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-evenly; }
-          .electron .dashboard .streams .scheduledStreamCard .controls #edit-btn {
-            background-color: skyblue;
-            padding: 3px;
-            font-size: 1em; }
-            .electron .dashboard .streams .scheduledStreamCard .controls #edit-btn:hover {
-              background: rgba(0, 0, 0, 0);
-              color: #3a7999;
-              box-shadow: inset 0 0 0 3px #3a7999; }
-          .electron .dashboard .streams .scheduledStreamCard .controls #delete-btn {
-            background-color: darkred;
-            padding: 3px;
-            font-size: 1em; }
-            .electron .dashboard .streams .scheduledStreamCard .controls #delete-btn:hover {
-              background: rgba(0, 0, 0, 0);
-              color: #3a7999;
-              box-shadow: inset 0 0 0 3px #3a7999; }
-  .electron .new-stream .header {
-    display: flex;
-    justify-content: center;
-    margin-top: 2em; }
-    .electron .new-stream .header #dashboard-btn {
-      margin: 1em;
-      float: left; }
-    .electron .new-stream .header .logoPlaceholder {
-      width: 50px;
-      height: 50px;
-      background-color: black; }
-  .electron .new-stream .inputs-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column; }
-    .electron .new-stream .inputs-container h1 {
-      justify-content: center; }
-    .electron .new-stream .inputs-container .forms-container form .title-input h3 {
-      justify-content: space-around; }
-    .electron .new-stream .inputs-container .forms-container form .bottom-container {
-      display: inline-flex;
-      justify-content: space-between; }
-  .electron .start-scheduled {
-    height: 100%; }
-    .electron .start-scheduled .header {
-      height: 20%;
-      display: flex;
-      justify-content: center; }
-      .electron .start-scheduled .header .logoPlaceholder {
-        width: 50px;
-        height: 50px;
-        background-color: black; }
-    .electron .start-scheduled .main-container {
-      height: 60%;
-      border: 2px solid black;
-      background-color: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: center; }
-      .electron .start-scheduled .main-container div h1 {
-        font-size: 2em; }
-      .electron .start-scheduled .main-container div p {
-        font-size: 1em; }
 
 /*# sourceMappingURL=index.css.map */
