--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -12,6 +12,8 @@
 
 html {
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   font-size: 16px;
 }
 
@@ -21,6 +23,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(32, 33, 51);
 }
 
 code {
@@ -49,7 +52,6 @@ code {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
