--- a/electronapp/src/styles/css/App.css
+++ b/electronapp/src/styles/css/App.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
 }
-.dashboard .header .image-placeholder {
+.dashboard .header .imageHeader {
   width: 50px;
   height: 50px;
   margin: 0.5em;
