--- a/electronapp/src/styles/scss/partials/_electronDashBoard.scss
+++ b/electronapp/src/styles/scss/partials/_electronDashBoard.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;     
 
-    .image-placeholder{
+    .imageHeader{
       
       width:50px;
       height:50px;
