reversed active array stream card to display most recent first

--- a/client/src/styles/scss/partials/_streamCards.scss
+++ b/client/src/styles/scss/partials/_streamCards.scss
@@ -29,6 +29,9 @@
   
       &:hover {
         opacity: 0.8;
+        transform: scale(1.05);
+        transition: transform .3s ease-in-out;
+
       }
 
       &.scheduled {
