--- a/electronapp/src/styles/scss/App.scss
+++ b/electronapp/src/styles/scss/App.scss
@@ -14,11 +14,13 @@ html {
 
 a {
   text-decoration: none;
+  color: #FFF;
 }
 
 .App {
   min-width: 100vh;
   min-height: 100vw;
+  overflow-x: hidden;
   overflow-y: auto;
   margin: 0;
   padding: 0;
@@ -35,6 +37,7 @@ a {
     
     .nav-container {
       min-width: 100vw;
+      max-width: 100vw;
     }
 
     .view-container {
