--- a/electronapp/src/styles/scss/partials/_electronDashBoard.scss
+++ b/electronapp/src/styles/scss/partials/_electronDashBoard.scss
@@ -10,6 +10,10 @@
     margin: 2rem;
     padding: 1rem;
 
+    .container-header {
+      color: #FFF;
+    }
+
     .scheduledStreamCard {
       display: flex;
       flex-direction: row;
