--- a/electronapp/src/styles/scss/partials/_nav.scss
+++ b/electronapp/src/styles/scss/partials/_nav.scss
@@ -1,20 +1,27 @@
-.nav-header {
-  display: flex;
-  min-width: 100vw;
-  flex-direction: row;
-  justify-content: space-between;
-  align-content: center;
-  height: 5rem;
-  background-color: #000000;
-
-  img.nav-logo {
-    max-height: 3rem;
-    margin: 0.5em 1rem;
-  }
-
-  .nav-links {
+.nav-container {
+  .nav-header {
     display: flex;
+    min-width: 100vw;
+    max-width: 100vw;
     flex-direction: row;
-
+    justify-content: space-between;
+    align-content: center;
+    height: 5rem;
+    background-color: #000000;
+  
+    img.nav-logo {
+      max-height: 3rem;
+      margin: 0.5em;
+    }
+  
+    .nav-links {
+      display: flex;
+      flex-direction: row;
+      .btn.nav-link {
+        font-size: 0.7rem;
+        color: #000;
+        max-width: 5rem;
+      }
+    }
   }
 }
