--- a/electronapp/src/styles/scss/partials/_scheduleNewStream.scss
+++ b/electronapp/src/styles/scss/partials/_scheduleNewStream.scss
@@ -1,4 +1,6 @@
 .new-stream {
+  color: #FFF;
+
   .header {
     display:flex;
     justify-content: center;
@@ -17,41 +19,18 @@
     
     h1{
       justify-content: center;
+      color: #FFF;
+    }
+    h3{
+      justify-content: space-around;
+      color: #FFF;
     }
     .forms-container{
 
       form{
-
-        .title-input{
-          
-          h3{
-            justify-content: space-around;
-          }
-          // input{
-
-          // }
-        }
-        // .description-input{
-        //   h3{
-
-        //   }
-        //   textarea{
-
-        //   }
-        // }
         .bottom-container{
           display:inline-flex;
           justify-content: space-between;
-
-          // .date-selection{
-
-          // }
-          // .image-select{
-
-          // }
-          // input{
-
-          // }
         }
       }
     }
