--- a/electronapp/src/styles/scss/partials/_startScheduled.scss
+++ b/electronapp/src/styles/scss/partials/_startScheduled.scss
@@ -1,32 +1,24 @@
   // new-stream
   .start-scheduled {
 
-    .header {
-      height:20%;
-
-      display: flex;
-      justify-content: center;
-
-      .logoPlaceholder {
-        width: 50px;
-        height: 50px;
-        background-color:black;
-      }
-    }
     .main-container{
-      height: 60%;
-      border: 2px solid black;
-      background-color: white;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      color: #FFF;
 
       div {
         h1{
           font-size: 2em;
+          color: #FFF;
+        }
+        h3{
+          font-size: 1.6em;
+          color: #FFF;
         }
         p {
           font-size: 1em;
+          color: #FFF;
         }
       }
     }
