--- a/electronapp/src/styles/scss/partials/_nav.scss
+++ b/electronapp/src/styles/scss/partials/_nav.scss
@@ -17,6 +17,7 @@
     .nav-links {
       display: flex;
       flex-direction: row;
+      margin-right: 3rem;
       .btn.nav-link {
         font-size: 0.7rem;
         color: #000;
