--- a/electronapp/public/styles/css/index.css
+++ b/electronapp/public/styles/css/index.css
@@ -18,9 +18,10 @@
 .dashboard .streams .scheduledStreamCard {
   display: flex;
   flex-direction: row;
+  color: #000;
   justify-content: space-between;
   border: 1px solid black;
-  background-color: #a7a7a7;
+  background-color: #cacaca;
   border-radius: 10px;
   box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.6);
   min-width: 75vw;
@@ -54,6 +55,7 @@
   padding: 3px;
   font-size: 0.7rem;
   border-radius: 5px;
+  margin: 0.5rem;
 }
 .dashboard .streams .scheduledStreamCard .controls #start-btn:hover {
   background: rgba(0, 0, 0, 0);
@@ -65,6 +67,7 @@
   padding: 3px;
   font-size: 0.7rem;
   border-radius: 5px;
+  margin: 0.5rem;
 }
 .dashboard .streams .scheduledStreamCard .controls #edit-btn:hover {
   background: rgba(0, 0, 0, 0);
@@ -76,6 +79,7 @@
   padding: 3px;
   font-size: 0.7rem;
   border-radius: 5px;
+  margin: 0.5rem;
 }
 .dashboard .streams .scheduledStreamCard .controls #delete-btn:hover {
   background: rgba(0, 0, 0, 0);
@@ -113,22 +117,51 @@
   justify-content: space-between;
 }
 
+.start-scheduled {
+  overflow: hidden;
+  display: flex;
+}
 .start-scheduled .main-container {
+  color: #FFF;
+  align-items: center;
   display: flex;
   flex-direction: column;
+  max-width: 60vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+.start-scheduled .main-container .content-wrapper {
+  display: flex;
   justify-content: center;
+  flex-direction: column;
+  max-width: 40vw;
+}
+.start-scheduled .main-container .content-wrapper .container-header {
+  font-size: 2rem;
+  display: flex;
   color: #FFF;
+  justify-content: center;
+}
+.start-scheduled .main-container .content-wrapper .youtube-header {
+  margin-left: 1rem;
+}
+.start-scheduled .main-container .content-wrapper .url-input {
+  margin: 0.5rem;
+  border-radius: 3px;
+}
+.start-scheduled .main-container .content-wrapper .submit-button {
+  margin-left: 1rem;
 }
 .start-scheduled .main-container div h1 {
-  font-size: 2em;
+  font-size: 2rem;
   color: #FFF;
 }
 .start-scheduled .main-container div h3 {
-  font-size: 1.6em;
+  font-size: 1.6rem;
   color: #FFF;
 }
 .start-scheduled .main-container div p {
-  font-size: 1em;
+  font-size: 1rem;
   color: #FFF;
 }
 
@@ -149,6 +182,7 @@
 .nav-container .nav-header .nav-links {
   display: flex;
   flex-direction: row;
+  margin-right: 3rem;
 }
 .nav-container .nav-header .nav-links .btn.nav-link {
   font-size: 0.7rem;
@@ -195,14 +229,14 @@ a {
 }
 
 .btn {
-  background-color: #bbbbbb;
-  color: #4d4d4d;
+  background-color: #bbb;
+  color: #000;
   text-decoration: none;
   display: flex;
   justify-content: center;
   align-content: center;
   align-self: center;
-  border: 1px solid #000;
+  border: 2px outset #bbb;
   border-radius: 4px;
   cursor: pointer;
   padding: 0.5rem;
