--- a/electronapp/src/styles/scss/partials/_electronDashBoard.scss
+++ b/electronapp/src/styles/scss/partials/_electronDashBoard.scss
@@ -17,9 +17,10 @@
     .scheduledStreamCard {
       display: flex;
       flex-direction: row;
+      color: #000;
       justify-content: space-between;
       border: 1px solid rgb(0, 0, 0);
-      background-color: rgb(167, 167, 167);
+      background-color: rgb(202, 202, 202);
       border-radius: 10px;
       box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.6);
       min-width: 75vw;
@@ -57,6 +58,7 @@
           padding:3px;
           font-size:0.7rem;
           border-radius: 5px;
+          margin: 0.5rem;
 
           &:hover {
             background: rgba(0,0,0,0);
@@ -70,6 +72,7 @@
           padding:3px;
           font-size:0.7rem;
           border-radius: 5px;
+          margin: 0.5rem;
 
           &:hover {
             background: rgba(0,0,0,0);
@@ -83,6 +86,7 @@
           padding:3px;
           font-size:0.7rem;
           border-radius: 5px;
+          margin: 0.5rem;
 
           &:hover {
             background: rgba(0,0,0,0);
