basic style for streamInfoCard

--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -9,6 +9,7 @@
 @import 'partials/indexHeader';
 @import 'partials/streamIndex';
 @import 'partials/nav';
+@import 'partials/streamInfoCard';
 
 html {
   box-sizing: border-box;
