logo fix, committing on master.

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -350,6 +350,7 @@
   background-color: #000000; }
   .nav .navLogo {
     height: 70%;
+    width: 100%;
     margin: 0.5em 1rem; }
   .nav .login-register {
     display: flex;
