--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -286,6 +286,9 @@
     letter-spacing: 2px;
     text-shadow: -1px 1px 1px black;
     width: 33.33%; }
+    @media screen and (max-width: 300px) {
+      .index-tabs .tablink {
+        font-size: 0.7rem; } }
     .index-tabs .tablink:focus {
       background-color: #777; }
     .index-tabs .tablink:hover {
@@ -346,15 +349,27 @@
   flex-direction: row;
   justify-content: space-between;
   align-content: center;
-  height: 4rem;
   background-color: #000000; }
+  @media screen and (max-width: 450px) {
+    .nav {
+      display: block; } }
   .nav .navLogo {
-    height: 70%;
-    width: 100%;
+    max-height: 70%;
+    max-width: 100%;
     margin: 0.5em 1rem; }
+    @media screen and (max-width: 450px) {
+      .nav .navLogo {
+        margin: 0rem 0.3rem; } }
   .nav .login-register {
     display: flex;
     flex-direction: row; }
+    @media screen and (max-width: 600px) and (min-width: 450px) {
+      .nav .login-register {
+        display: block; } }
+    @media screen and (max-width: 450px) {
+      .nav .login-register {
+        display: flex;
+        justify-content: space-around; } }
     .nav .login-register .navBtn {
       background-color: #bbbbbb;
       color: #4d4d4d;
@@ -366,9 +381,15 @@
       cursor: pointer;
       padding: 0.5rem;
       font-size: 0.75rem;
-      margin: 1rem 2rem 1rem 0rem;
+      margin: 1.5rem 1rem;
       width: 6rem;
       border-radius: 4px; }
+      @media screen and (max-width: 600px) and (min-width: 450px) {
+        .nav .login-register .navBtn {
+          margin: 0.1rem 3rem; } }
+      @media screen and (max-width: 450px) {
+        .nav .login-register .navBtn {
+          margin: 1rem; } }
       .nav .login-register .navBtn:hover {
         background-color: #777; }
 
