--- a/electronapp/src/styles/scss/partials/_nav.scss
+++ b/electronapp/src/styles/scss/partials/_nav.scss
@@ -14,7 +14,7 @@
       margin: 0.5em;
     }
 
-    .btn.nav-link {
+    .btncc.nav-link {
       font-size: 0.7rem;
       color: #000;
       max-width: 7rem;
